@@ -918,7 +918,7 @@ We instead assume that nothing is reordered and do a shift.
 
 if (length(dropterms)) {
     Terms2 <- Terms[ -dropterms]
-    X <- model.matrix(Terms2, mf, constrasts=contrast.arg)
+    X <- model.matrix(Terms2, mf, constrasts.arg=contrast.arg)
     # we want to number the terms wrt the original model matrix
     temp <- attr(X, "assign")
     shift <- sort(dropterms)
@@ -926,7 +926,7 @@ if (length(dropterms)) {
     if (length(shift)==2) temp + 1*(shift[2] <= temp)
     attr(X, "assign") <- temp 
 }
-else X <- model.matrix(Terms, mf, contrasts=contrast.arg)
+else X <- model.matrix(Terms, mf, contrasts.arg=contrast.arg)
 
 # drop the intercept after the fact, and also drop strata if necessary
 Xatt <- attributes(X) 
