@@ -38,7 +38,7 @@ while for the computation proper it is easier to make use of the same
 expanded data set that coxph used for a multi-state fit.
 
 <<survfit.coxphms-setupa>>=
-# Rebuild istate using the mcheck routine
+# Rebuild istate using the survcheck routine
 istate <- model.extract(mf, "istate")
 mcheck <- survcheck2(Y, oldid, istate)
 transitions <- mcheck$transitions
@@ -62,11 +62,13 @@ else                  tempstrat <- strata
 if (length(absorb)) droprow <- istate %in% absorb  else droprow <- FALSE
 if (any(droprow)) {
     j <- which(!droprow)
-    cifit <- survfitCI(as.factor(tempstrat[j]), Y[j,], weights[j], oldid[j], 
+    cifit <- survfitCI(as.factor(tempstrat[j]), Y[j,], weights[j], 
+                       id =oldid[j], istate= istate[j],
                        istate[j], stype=stype, ctype=ctype,
                        se.fit=FALSE, start.time=start.time, p0=p0)
     }
-else cifit <- survfitCI(as.factor(tempstrat), Y, weights, oldid, istate, 
+else cifit <- survfitCI(as.factor(tempstrat), Y, weights, 
+                        id= oldid, istate = istate, 
                         stype=stype, ctype=ctype, se.fit=FALSE, 
                         start.time=start.time, p0=p0)
 
